# XiLoop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/actuator_pid/: run.py  testplan.yaml  tune.py
examples/bms_protection/: run.py
examples/dc_motor/: plant.py  run.py  testplan.yaml
hilo/: __init__.py  campaign.py  controllers.py  engine.py  interfaces.py  metrics.py  plants.py
tests/: test_campaign.py  test_engine.py  test_metrics_and_dashboard.py
xiloop/: __init__.py  campaign.py  controllers.py  dashboard.py  engine.py  interfaces.py  metrics.py  plants.py
