[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hilo-framework"
version = "0.1.0"
description = "HiLo - X-in-the-Loop orchestration: wire any controller to any plant model, run the loop, verify requirements."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Muhamad Alif Izzuwan Bin Ibrahim" }]
dependencies = ["pyyaml"]

[project.optional-dependencies]
plot = ["matplotlib"]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
include = ["hilo*"]
